--- a/tensquare_eureka/src/main/resources/bootstrap.yml
+++ b/tensquare_eureka/src/main/resources/bootstrap.yml
@@ -4,4 +4,4 @@ spring:
       name: eureka
       profile: dev
       label: master
-      uri: http://localhost:12000
+      uri: http://192.168.80.128:12000
